<resources>
    <string name="app_name">辽宁大学</string>
    <string name="school_badge">school_badge</string>
    <string name="stuid">学号</string>
    <string name="title_activity_login_activitys">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password">密码</string>
    <string name="confirm">确认</string>
    <string name="input_password">请输入密码</string>
    <string name="input_stuid">请输入学号</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="mainpage">主页</string>
    <string name="application">应用</string>
    <string name="personal">个人</string>
    <string name="course">课表</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="_8_00_n1">8:00\n1</string>
    <string name="_9_00_n2">9:00\n2</string>
    <string name="_10_10_n3">10:10\n3</string>
    <string name="_11_10_n4">11:10\n4</string>
    <string name="_13_30_n5">13:30\n5</string>
    <string name="_14_30_n6">14:30\n6</string>
    <string name="_15_40_n7">15:40\n7</string>
    <string name="_16_40_n8">16:40\n8</string>
    <string name="back">后退</string>
    <string name="score">成绩</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
