<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:text="@string/mainpage"
        android:id="@+id/btn_main"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="55dp" />
    <Button
        android:text="@string/application"
        android:id="@+id/btn_app"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="55dp" />
    <Button
        android:text="@string/personal"
        android:id="@+id/btn_personal"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="55dp" />
</LinearLayout>