<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <TextView
            android:paddingStart="50sp"
            android:paddingEnd="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stuid"
            android:id="@+id/txt_stuid"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:paddingLeft="50sp"
            android:paddingRight="20sp">

        </TextView>

        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etxt_stuid"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/input_stuid"
            android:textColorHint="#d2d2d2"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_alignParentLeft="true">

        <TextView
            android:paddingStart="50sp"
            android:paddingEnd="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/txt_password"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"
            android:paddingLeft="50sp"
            android:paddingRight="20sp">

        </TextView>

        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etxt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/input_password"
            android:textColorHint="#d2d2d2"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btn_confirm"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="#467ed7"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_report"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignLeft="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:contentDescription="@string/school_badge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

</RelativeLayout>
